<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".aip.PermissionActivity"
            android:background="@color/backgroundMain">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="@string/storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnStorage"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnLocation"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/btnStorage" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/camara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnCamara"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLocation" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnPhone"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnCamara"
                android:layout_marginTop="25dp"/>
        <Button
                android:text="@string/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnContacts"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPhone" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>