<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:background="@color/backgroundMain">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView2"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView4"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView6"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView6"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView7"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView12"/>
        <TextView
                android:text="@string/aip_header"
                android:layout_width="0dp"
                android:layout_height="50dp" android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/imageView"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textStyle="bold"
                android:textColor="@android:color/background_light" android:textSize="22sp"/>
        <TextView
                android:text="@string/storage"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView2"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toStartOf="@+id/swStorage" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/imageView2"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/location"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView4"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/swLocation" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/camara"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView6"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintEnd_toStartOf="@+id/swCamara" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView10"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintEnd_toStartOf="@+id/swPhone" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/textView7"/>
        <TextView
                android:text="@string/contacts"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView12"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintEnd_toStartOf="@+id/swContacts" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/storage_desc"
                android:layout_width="0dp"
                android:layout_height="33dp" android:id="@+id/textView3"
                android:textColor="?attr/colorButtonNormal" android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/swStorage"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView2"/>
        <TextView
                android:text="@string/location_desc"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView5"
                android:textColor="?attr/colorButtonNormal" android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/swLocation" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>
        <TextView
                android:text="@string/camara_desc"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView7"
                android:textColor="?attr/colorButtonNormal" android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintEnd_toStartOf="@+id/swCamara" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>
        <TextView
                android:text="@string/phone_desc"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView11"
                android:textColor="?attr/colorButtonNormal" android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintEnd_toStartOf="@+id/swPhone" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>
        <TextView
                android:text="@string/contacts_desc"
                android:layout_width="0dp"
                android:layout_height="21dp" android:id="@+id/textView13"
                android:textColor="?attr/colorButtonNormal" android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintEnd_toStartOf="@+id/swContacts" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>
        <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/swStorage"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.5"
                android:checked="false"/>
        <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/swLocation"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/swStorage"
                app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.5"
                android:checked="false"/>
        <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/swCamara"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/swLocation"
                app:layout_constraintStart_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.5"
                android:checked="false"/>
        <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/swPhone"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10" app:layout_constraintHorizontal_bias="0.5"
                android:checked="false" app:layout_constraintTop_toBottomOf="@+id/swCamara"/>
        <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/swContacts"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/swPhone"
                app:layout_constraintStart_toEndOf="@+id/textView12" app:layout_constraintHorizontal_bias="0.5"
                android:checked="false"/>
        <Button
                android:text="@string/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnContinue"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"/>
        <Button
                android:text="@string/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnCancel"
                app:layout_constraintEnd_toStartOf="@+id/btnContinue" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>